# donatello_ros_stack

./: README.md  lichtblick_panel_config.json  script.bash
docker/: docker-compose.yml  run.sh
docker/files/: dependencies_other.repos  developer_rc  fixuid_config.yml  patched_collection_fortress.yaml  ros_entrypoint.sh
docker/images/humble/: Dockerfile
docker/images/jazzy/: Dockerfile
donatello_bringup_common/: CMakeLists.txt  package.xml
donatello_bringup_common/launch/: main.launch.py
donatello_bringup_realbot/: CMakeLists.txt  package.xml
donatello_bringup_realbot/launch/: main.launch.py
donatello_bringup_sim/: CMakeLists.txt  package.xml
donatello_bringup_sim/launch/: main.launch.py
donatello_description/: CMakeLists.txt  package.xml
donatello_description/config/: base_params.yaml  sensor_params.yaml  shelf_params.yaml  wheel_params.yaml
donatello_description/launch/: display.launch.py  main.launch.py
donatello_description/meshes/: controller_support.dae  depth_camera_support.dae  lidar_cpu_shelves.dae
donatello_description/rviz/: display.rviz
donatello_description/urdf/: common_colors.urdf.xacro  donatello.urdf.xacro  extensions.urdf.xacro  sensors.urdf.xacro
donatello_gazebo/: CMakeLists.txt  package.xml
donatello_gazebo/config/: bridge.yaml
donatello_gazebo/launch/: main.launch.py
donatello_gazebo/worlds/: minimal.sdf
donatello_localization/: CMakeLists.txt  package.xml
donatello_localization/config/: params.yaml
donatello_localization/launch/: main.launch.py
donatello_localization/maps/donatello_bookstore_world/: map.pgm  map.yaml
donatello_localization/maps/home_berisso/: map.pgm  map.yaml
donatello_navigation/: CMakeLists.txt  package.xml
donatello_navigation/config/: behavior_server_params.yaml  bt_navigator_params.yaml  controller_params_mppi.yaml  controller_params_mppi_omni.yaml  global_costmap_params.yaml  hystheresis_control_params.yaml  local_costmap_params.yaml  planner_server_params.yaml  velocity_smoother_params.yaml  waypoint_follower_params.yaml
donatello_navigation/config/planning/navfn_mppi/: controller_params.yaml
donatello_navigation/config/planning/navfn_rpp/: controller_params.yaml  global_costmap_params.yaml
donatello_navigation/launch/: main.launch.py
donatello_navigation_configurations/: CMakeLists.txt  package.xml
donatello_navigation_configurations/controller_config/regulated_pure_pursuit/: controller_server_params.yaml
donatello_navigation_configurations/planner_config/hybrid-a/: global_costmap_params.yaml  planner_server_params.yaml
donatello_online_mapping/: package.xml
donatello_online_mapping/config/: online_async_mapping.yaml
donatello_rosbridge/: CMakeLists.txt  package.xml
donatello_rosbridge/config/: rosapi_node.yaml  rosbridge_server.yaml
donatello_rosbridge/launch/: main.launch.py
donatello_rosbridge/panels/: kobuki_lichtblick.json
donatello_rqt/: CMakeLists.txt  package.xml
donatello_rviz2/: CMakeLists.txt  package.xml
donatello_rviz2/launch/: main.launch.py
donatello_rviz2/rviz/: model.rviz
donatello_teleop/: CMakeLists.txt  package.xml
donatello_teleop/config/: joy_linux.config.yaml
donatello_teleop/gamepads/: xbox.config.yaml
donatello_teleop/launch/: main.launch.py  teleop_input_gamepad_launch.py  teleop_input_keyboard_launch.py
donatello_worlds/donatello_bookstore_world/: CMakeLists.txt  README.md  README.original.md  package.xml
donatello_worlds/donatello_bookstore_world/env-hooks/: donatello_bookstore_world.dsv.in  donatello_bookstore_world.sh.in
donatello_worlds/donatello_bookstore_world/launch/: display.launch.py
donatello_worlds/donatello_bookstore_world/map/: map.pgm
donatello_worlds/donatello_bookstore_world/models/aws_robomaker_retail_BookE_01/: model.sdf
donatello_worlds/donatello_bookstore_world/models/aws_robomaker_retail_BookshelfB_01/meshes/: aws_BookshelfB_01_visual.DAE
donatello_worlds/donatello_bookstore_world/models/aws_robomaker_retail_MagicCube_01/: model.sdf
donatello_worlds/donatello_bookstore_world/models/aws_robomaker_retail_SecurityCamera_01/: model.sdf
donatello_worlds/donatello_bookstore_world/routes/: route.yaml
donatello_worlds/donatello_bookstore_world/worlds/: bookstore.sdf
donatello_worlds/donatello_plain_world/: CMakeLists.txt  package.xml
donatello_worlds/donatello_plain_world/launch/: display.launch.py
donatello_worlds/donatello_plain_world/worlds/: minimal.sdf
inorbit/: .gitignore  agent.env.sh.base
mapping_utils/cartographer_tools/: .gitignore  process_bags.sh
mapping_utils/cartographer_tools/configuration_files/: narrow_spaces_2d.lua
mapping_utils/donatello_mapping_utils/: CMakeLists.txt  package.xml
mapping_utils/donatello_online_mapping/: CMakeLists.txt  package.xml
mapping_utils/donatello_online_mapping/config/: online_async_mapping.yaml
mapping_utils/donatello_online_mapping/launch/: main.launch.py
mapping_utils/donatello_rosbag_utils/: CMakeLists.txt  README.md  package.xml
mapping_utils/donatello_rosbag_utils/launch/: replay_bag.launch.py
realbot_drivers/donatello_perception/: CMakeLists.txt  package.xml
realbot_drivers/donatello_perception/config/: realsense_d435i_config.yaml  robomaster_ep.yaml
realbot_drivers/donatello_perception/launch/: driver_realsense.launch.py  driver_robomaster_ep.launch.py  driver_rplidar.launch.py  main.launch.py  test_robobomaster.launch.py  test_sensors.launch.py
scripts/rules.d/: 95-rplidar.rules  98-lighthouse.rules
utils/donatello_go_for_a_walk/: CMakeLists.txt  package.xml
utils/donatello_go_for_a_walk/config/: donatello_bookstore_poses.yaml
utils/donatello_go_for_a_walk/launch/: main.launch.py
utils/donatello_misc/: CMakeLists.txt  package.xml
utils/donatello_misc/config/: cmd_vel_mux_params.yaml
utils/donatello_misc/launch/: main.launch.py
utils/donatello_odom_filter/: CMakeLists.txt  package.xml
utils/donatello_rf2o_odom/: CMakeLists.txt  package.xml
utils/donatello_twist_dithering/: package.xml  setup.cfg  setup.py
utils/librealsense2/: CMakeLists.txt  package.xml
(+5 files in other folders)
