<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>donatello_navigation</name>
  <version>1.0.0</version>
  <description> TBD </description>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_waypoint_follower</depend>

  <depend>donatello_twist_dithering</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>nav2_dwb_controller</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_rotation_shim_controller</depend>

  <depend>nav2_navfn_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
