<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>donatello_bookstore_world</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker package for a bookstore with sheling and tables Gazebo simulations.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_sim</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
