<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>donatello_go_for_a_walk</name>
  <version>1.0.0</version>
  <description> TBD </description>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>random_walker</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
